# gbp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py  test_ros2.py
.github/workflows/: dist.yml  release-beta.yml  release-please.yml
examples/api/: README.md  example_api.py
examples/ros/: Dockerfile  README.md  client.py  client.sh  entrypoint.sh  py_wrapper.sh
examples/ros/actions/action_simple/: CMakeLists.txt  package.xml
examples/ros/actions/action_simple/action/: ActionSimple.action
examples/ros/src/: main.py  node.py  spinner.py  util.py
examples/ros/test/: action_client.py  subscriber.py
examples/simple/: README.md  main.py
src/gbp/: __init__.py  builders.py  client.py  connection.py  debug.py  effects.py  gbc.py  gbc_extra.py  heartbeat.py  logger.py  machine_state.py  op.py  stream.py
src/gbp/effects/: __init__.py  debug.py  heartbeat.py  op.py  solo_activity.py  stream.py  types.py
src/gbp/effects/input/: digital.py
src/gbp/ros/: __init__.py  spinner.py
tests/: README.md  conftest.py  main.py  solo_activity_test.py  stream_test.py
