[metadata]
name = gbp
version = 0.1.0
author = glowbuzzer
author_email = hello@glowbuzzer.com
description = Python bindings for the GBC API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glowbuzzer/gbp
project_urls =
    Bug Tracker = https://github.com/glowbuzzer/gbp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src